["Untested"]  subsystem cleanup and elevator levels
Co-Authored-By: William Hoang <171635909+billionhonk@users.noreply.github.com>
Co-Authored-By: silverx257 <109992135+silverx257@users.noreply.github.com>